Add GitHub Pages deployment configuration

--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "sherman-physics-portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yourusername.github.io/sherman-physics-portfolio",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.0",
+    "framer-motion": "^11.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^6.1.0",
-    "framer-motion": "^11.5.0",
     "recharts": "^2.12.0",
+    "styled-components": "^6.1.0",
     "web-vitals": "^3.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
