--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "reactflow": "^11.11.4",
     "recharts": "^2.12.0",
     "styled-components": "^6.1.0",
     "web-vitals": "^5.0.3"
