--- a/.vercelignore
+++ b/.vercelignore
@@ -1,27 +1,29 @@
-# Don't ignore node_modules during build
-!node_modules
+# Dependencies
+node_modules/
 
-# Don't ignore package files
-!package.json
-!package-lock.json
-
-# Ignore development files
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Ignore build artifacts (will be generated)
+# Build output (will be generated)
 build/
 
-# Ignore git files
+# Git files
 .git/
 .gitignore
 
-# Ignore IDE files
+# IDE files
 .vscode/
 .idea/
 
-# Ignore OS files
+# OS files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log* 
