--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "vercel-build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -47,7 +44,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
   },
   "overrides": {
     "nth-check": "^2.0.1",
