Fix homepage URL to match actual GitHub username and add workflow permissions

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sherman-physics-portfolio",
   "version": "0.2.0",
   "private": true,
-  "homepage": "https://shermanwong.github.io/sherman-physics-portfolio",
+  "homepage": "https://pm45w.github.io/sherman-physics-portfolio",
   "engines": {
     "node": ">=16.0.0"
   },
